Fix search form

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <main class="container">
-      <div
+      <form
         id="search-form"
         class="position-relative input-group mb-3"
         style="margin-top: 100px"
@@ -42,16 +42,12 @@
           aria-label="Recipient's username"
           aria-describedby="button-addon2"
         />
-        <button
-          class="btn btn-outline-secondary"
-          type="button"
-          id="search-form1"
-        >
+        <button class="btn btn-outline-secondary" type="submit">
           Search
 
           <i class="bi bi-search-heart"> </i>
         </button>
-      </div>
+      </form>
       <div class="my-3 container d-none" id="weather-info">
         <div class="row">
           <div class="col-sm-6">
