--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <ul>
               <li>Humidity: <span id="humidity"></span>%</li>
-              <li>Wind: <span id="wind"></span> km/h</li>
+              <li>Wind: <span id="wind"></span></li>
             </ul>
           </div>
         </div>
